[package]
name = "cctx-rs"
version = "0.1.0"
authors = ["asyade <acorbeau@student.42.fr>"]
edition = "2018"

[dependencies]
failure="0.1.2"
hyper="0.12.12"
futures="0.1.17"
serde_json = "1.0.32"
serde_derive = "1.0.80"
tokio="0.1.11"
tokio-core = "0.1.17"
tokio-reactor="0.1.6"
hyper-tls = "0.3.1"
try_future = "0.1.3"
